--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
 title: "Outstanding User Interfaces with Shiny Book Club"
-author: "The R4DS Online Learning Community"
+author: "The Data Science Learning Community"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
@@ -8,7 +8,7 @@ bibliography: book.bib
 biblio-style: apalike
 link-citations: yes
 github-repo: r4ds/bookclub-shinyui
-description: "This is the product of the R4DS Online Learning Community's Outstanding User Interfaces with Shiny Book Club."
+description: "This is the product of the Data Science Learning Community's Outstanding User Interfaces with Shiny Book Club."
 ---
 
 # Welcome {-}
@@ -16,11 +16,11 @@ description: "This is the product of the R4DS Online Learning Community's Outsta
 Welcome to the bookclub! 
 
 This is a companion for the book [_Outstanding User Interfaces with Shiny_](https://unleash-shiny.rinterface.com/index.html) by David Granjon (Chapman & Hall, copyright August 31, 2022, [9780367645267](https://www.routledge.com/Outstanding-User-Interfaces-with-Shiny/Granjon/p/book/9780367645267)).
-This companion is available at [r4ds.io/shinyui](https://r4ds.io/shinyui).
+This companion is available at [dslc.io/shinyui](https://dslc.io/shinyui).
 
-This website is being developed by the [R4DS Online Learning Community](https://rfordatasci.com). Follow along, and [join the community](https://r4ds.io/join) to participate.
+This website is being developed by the [Data Science Learning Community](https://dslc.io). Follow along, and [join the community](https://dslc.io/join) to participate.
 
-This companion follows the [R4DS Online Learning Community Code of Conduct](https://r4ds.io/conduct).
+This companion follows the [Data Science Learning Community Code of Conduct](https://dslc.io/conduct).
 
 ## Book club meetings {-}
 
@@ -28,7 +28,7 @@ This companion follows the [R4DS Online Learning Community Code of Conduct](http
   - **This is the best way to learn the material.**
 - Presentations will usually consist of a review of the material, a discussion, and/or a demonstration of the principles presented in that chapter.
 - More information about how to present is available in the [github repo](https://github.com/r4ds/bookclub-shinyui).
-- Presentations will be recorded, and will be available on the [R4DS Online Learning Community YouTube Channel](https://r4ds.io/youtube).
+- Presentations will be recorded, and will be available on the [Data Science Learning Community YouTube Channel](https://dslc.io/youtube).
 
 ## Pace {-}
 
